# WorkshopTage25-Agents

./: .env.template  .gitignore  ERTI_notes.odt  LICENSE  README.md  pyproject.toml
.chainlit/: config.toml
agent_repo/: public_transport.py
aia25/: app.py  bootstrap.py  cli.py  model_provider.py  start_app.py
aia25/agent_repo/: agent_service.py  maps.py  public_transport.py  scheduling_agent.py  shared.py  topic_guardrail.py  triage_agent.py  weather.py  webbrowser.py  webbrowser_agent.py  websearch.py  websearch_agent.py
aia25/tools_repo/: ExampleCalendar.ics  calendar_client.py  calendar_scheduling.py  mcp_servers.py  public_transport.py  time.py
aia25/ui/: app.py
exercise01/: README.md  my_agents.py  my_tools.py
exercise02/: README.md  calendar_client.py  my_agents.py  my_tools.py
exercise03/: README.md  my_agents.py  my_tools.py
exercise04/: README.md  my_agents.py  my_tools.py
scripts/: mcp_list_tools.py  mcp_playwright_agent.py
solution_exercise02/: README.md  my_agents.py  my_tools.py
solution_exercise03/: ExampleCalendar.ics  my_agents.py  my_tools.py
solution_exercise04/: ExampleCalendar.ics  my_agents.py  my_tools.py
ui/: app.py
