[project]
name = "aia25"
version = "0.1.0"
description = "Repository for the Open Source AI Workshop - AI Agents in Action: Building Smart, Open-Source LLM Workflows - May 9, 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.7.2",
    "ics>=0.7.2",
    "mlflow>=3.3.2",
    "openai>=1.106.1",
    "openai-agents>=0.2.11",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]

[tool.setuptools]
packages = ["aia25"]

[dependency-groups]
dev = []

[project.scripts]
app = "aia25.cli:main"
